Array___String/String/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Info: Nothing to build for EX_3
Info: Nothing to build for EX_3
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
11:13:20 **** Incremental Build of configuration Debug for project EX_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:5:16: warning: unused variable 'str2' [-Wunused-variable]
  char str1[50],str2[50];
                ^~~~
..\main.c:4:6: warning: unused variable 'i' [-Wunused-variable]
  int i,len;
      ^
gcc -o EX_3.exe main.o 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file EX_3.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
11:13:23 **** Incremental Build of configuration Debug for project EX_3 ****
Info: Internal Builder is used for build
gcc -o EX_3.exe main.o 
c:/mingw/bin/../lib/gcc/mingw32/6.3.0/../../../../mingw32/bin/ld.exe: cannot open output file EX_3.exe: Permission denied
collect2.exe: error: ld returned 1 exit status
11:15:00 **** Incremental Build of configuration Debug for project EX_3 ****
Info: Internal Builder is used for build
gcc -o EX_3.exe main.o 
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
11:15:33 **** Incremental Build of configuration Debug for project EX_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o EX_3.exe main.o 
Info: Nothing to build for EX_3
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
11:15:47 **** Incremental Build of configuration Debug for project EX_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o EX_3.exe main.o 
Info: Nothing to build for EX_3
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
11:16:04 **** Incremental Build of configuration Debug for project EX_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o EX_3.exe main.o 
Info: Nothing to build for EX_3
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
11:16:16 **** Incremental Build of configuration Debug for project EX_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o EX_3.exe main.o 
Info: Nothing to build for EX_3
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
11:16:55 **** Incremental Build of configuration Debug for project EX_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:19:2: error: 'arr2' undeclared (first use in this function)
  arr2[len+1]='/0';
  ^~~~
..\main.c:19:2: note: each undeclared identifier is reported only once for each function it appears in
..\main.c:19:14: warning: multi-character character constant [-Wmultichar]
  arr2[len+1]='/0';
              ^~~~
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
11:17:10 **** Incremental Build of configuration Debug for project EX_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:19:14: warning: multi-character character constant [-Wmultichar]
  str2[len+1]='/0';
              ^~~~
..\main.c:19:14: warning: overflow in implicit constant conversion [-Woverflow]
gcc -o EX_3.exe main.o 
Info: Nothing to build for EX_3
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
11:17:42 **** Incremental Build of configuration Debug for project EX_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:19:12: warning: multi-character character constant [-Wmultichar]
  str2[len]='/0';
            ^~~~
..\main.c:19:12: warning: overflow in implicit constant conversion [-Woverflow]
gcc -o EX_3.exe main.o 
Info: Nothing to build for EX_3
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
11:18:05 **** Incremental Build of configuration Debug for project EX_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:19:12: warning: multi-character character constant [-Wmultichar]
  str2[len]='/0';
            ^~~~
..\main.c:19:12: warning: overflow in implicit constant conversion [-Woverflow]
gcc -o EX_3.exe main.o 
Info: Nothing to build for EX_3
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
11:18:40 **** Incremental Build of configuration Debug for project EX_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o EX_3.exe main.o 
Info: Nothing to build for EX_3
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
11:19:19 **** Incremental Build of configuration Debug for project EX_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o EX_3.exe main.o 
Info: Nothing to build for EX_1
Info: Nothing to build for EX_2
11:19:30 **** Incremental Build of configuration Debug for project EX_3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o EX_3.exe main.o 
Info: Nothing to build for EX_3
